src/pages/MainPage.css
@font-face {
    font-family: 'Nanum GaramYeonGkot';
    src: url('../fonts/나눔손글씨 가람연꽃.ttf') format('truetype');
  }

@font-face {
  font-family: 'Nanum GangBuJangNimChe';
  src: url('../fonts/나눔손글씨 강부장님체.ttf') format('truetype');
}

body {
    margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden; /* 스크롤바 숨김 */
  }
  
  .main-page {
    text-align: center;
    overflow: hidden; /* 스크롤바 숨김 */
}
  
  .main-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    background-color: #000;
    color: #fff;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1000;
  }
  
  .logo {
    font-size: 1.5em;
    font-weight: bold;
    font-family: 'Nanum GaramYeonGkot', sans-serif;
  }
  
  .main-nav {
    display: flex;
    align-items: center;
    padding-right: 20px; /* 오른쪽 여백을 추가하여 왼쪽으로 이동 */

  }
  
  .main-nav a,
  .dropbtn {
    color: #fff;
    text-decoration: none;
    margin: 0 10px;
    padding: 10px;
    font-size: 1.1em;
    background: none;
    border: none;
    cursor: pointer;
    text-decoration: none;
  }

  .nav-button:hover {
  background-color: #555;
}
  
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  .dropdown-content a:hover {
    background-color: #f1f1f1;
  }
  
  .dropdown:hover .dropdown-content {
    display: block;
  }
  
  .dropdown:hover .dropbtn {
    background-color: #3e8e41;
  }
  
  .main-content img {
    width: 100%;
    height: auto;
    margin-top: 60px; /* 헤더 높이만큼 마진 추가 */
  }
  
  .scroll-section {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color:  #d8c8b0;
  font-size: 1.5em;
}

.scroll-section p {
    font-family: 'Nanum GangBuJangNimChe', sans-serif; /* p 태그에 글꼴 적용 */
    font-size: 2em; /* 글씨 크기를 두 배로 키움 */
  }

.start-button {
  margin-top: 20px;
  padding: 10px 20px;
  font-size: 1em;
  cursor: pointer;
  background-color: #000;
  color: #fff;
  border: none;
  border-radius: 5px;
}

